apps/memos/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: memos
  labels:
    app: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      volumes:
        - name: memos-nfs
          persistentVolumeClaim:
            claimName: memos-nfs
      containers:
        - name: memos
          image: ghcr.io/hay-kot/homebox:v0.10.2
          ports:
            - containerPort: 5230
          volumeMounts:
            - name: memos-nfs
              mountPath: //var/opt/memos
