apps/memos/service.yml
apiVersion: v1
kind: Service
metadata:
  name: memos-service
  namespace: memos
spec:
  ports:
  - name: http
    port: 5230
    protocol: TCP
  selector:
    app: memos
  type: ClusterIP
