apps/memos/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: stepca-prod
  name: memos
  namespace: memos
spec:
  rules:
  - host: memos.kube.home
    http:
      paths:
      - backend:
          service:
            name: memos-service
            port:
              number: 5230
        path: /
        pathType: Prefix
  tls:
    - secretName: memos-tls
      hosts:
        - memos.kube.home
